add glyph sheet for SAS verification emoji

--- a/www_codegen/index.html
+++ b/www_codegen/index.html
@@ -10,6 +10,7 @@
      <option value="img/bold.png">bold.png</option>
      <option value="img/regular.png">regular.png</option>
      <option value="img/small.png">small.png</option>
+     <option value="img/sas_emoji.png">sas_emoji.png</option>
    </select>
  </p>
  <br>
